Fix phone number alignment

--- a/public/media/css/master.scss
+++ b/public/media/css/master.scss
@@ -1540,7 +1540,7 @@ main > section {
   &__phone {
     position: absolute;
     top: -15px;
-    left: 0;
+    left: 16px;
     display: none;
     padding: 2px 4px;
     border: 1px solid #e6e8eb;
